# net-hardening-audit-agent

./: .dockerignore  .env.example  .gitignore  Dockerfile  LICENSE  pyproject.toml  requirements.txt
rules/: cis_ubuntu2204_l1.yaml
scripts/: capture_fixtures.py  run_agent.py  run_audit.py
src/: assemble.py  schema.py
src/agent/: graph.py  llm.py  nodes.py  render.py  state.py
src/collectors/: base.py  commands.py  fixture_collector.py  ssh_collector.py
src/engine/: evaluator.py  loader.py  models.py  operators.py
src/parsers/: files.py  sshd.py  sysctl.py
tests/: test_agent.py  test_engine.py  test_parsers.py
tests/fixtures/: enabled_services.txt  file_perms.txt  sshd_effective.txt  sysctl.txt
