[project]
name = "audit-agent"
version = "0.1.0"
description = "Network Hardening Audit Agent — Ubuntu 22.04 CIS L1, LangGraph-orchestrated"
requires-python = ">=3.11"
dependencies = [
    "langgraph>=0.2",
    "langchain-core>=0.3",
    "anthropic>=0.40",
    "paramiko>=3.4",
    "pydantic>=2.8",
    "pyyaml>=6.0",
    "jinja2>=3.1",
    "weasyprint>=62.0",
    "python-dotenv>=1.0",
    "rich>=13.7",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0",
    "pytest-cov>=5.0",
    "ruff>=0.6",
    "mypy>=1.11",
    "types-PyYAML",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.ruff]
line-length = 100
target-version = "py311"

[tool.ruff.lint]
select = ["E", "F", "I", "UP", "B"]

[tool.mypy]
python_version = "3.11"
strict = true
ignore_missing_imports = true

[tool.pytest.ini_options]
testpaths = ["tests"]
